# otel-grafana-setup

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  otel-collector-config.yaml  pyproject.toml  requirements.txt
config/opentelemetry/: otel-collector-config.yaml
config/prometheus/: prometheus.yaml
config/tempo/: tempo.yaml
