[tool.poetry]
name = "otel-grafana-setup"
version = "0.1.0"
description = ""
authors = ["Cinnamoon-dev <pedrolcsilva10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
opentelemetry-distro = "^0.45b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
